<resources>
    <string name="app_name">JobNet</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="nav_header_title">Temp</string>
    <string name="nav_header_subtitle">contacto@jobnet.net</string>
    <string name="nav_header_desc">Header</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Servicios</string>
    <string name="menu_slideshow">Login</string>


    <string name="textosoldador">Se trata de una profesión que está encargada de ejecutar instalaciones y reparaciones referentes a la electricidad. Sobre todo cuando se refiere a los equipos y la iluminación. Además, se encarga de ensamblar, probar y determinar los diversos fallos que se pueden presentar en un cableado</string>
    <string name="otros_servicios">Otros servicios</string>
    <string name="que_necesita">¿Que necesita?</string>
    <string name="confirmar_servicio">Confirmar servicio</string>
    <string name="observaciones">Observaciones</string>
    <string name="fecha_de_servivio">Fecha de servivio</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="et_email">E-mail</string>
    <string name="et_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">"¡Bienvenido!"</string>
    <string name="invalid_username">Nombre de usuario inválido</string>
    <string name="invalid_password">La constraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">"El ingreso falló"</string>
    <string name="aqu_va_el_logo">Aquí va el logo</string>

    <string name="title_activity_pqr">pqr</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_email">Email</string>
    <string name="carpenter_text">Se trata de una profesión que está encargada de ejecutar instalaciones y reparaciones referentes a la electricidad. Sobre todo cuando se refiere a los equipos y la iluminación. Además, se encarga de ensamblar, probar y determinar los diversos fallos que se pueden presentar en un cableado</string>
    <string name="cworker_text">Se trata de una profesión que está encargada de ejecutar instalaciones y reparaciones referentes a la electricidad. Sobre todo cuando se refiere a los equipos y la iluminación. Además, se encarga de ensamblar, probar y determinar los diversos fallos que se pueden presentar en un cableado</string>
    <string name="cleaner_text">Se trata de una profesión que está encargada de ejecutar instalaciones y reparaciones referentes a la electricidad. Sobre todo cuando se refiere a los equipos y la iluminación. Además, se encarga de ensamblar, probar y determinar los diversos fallos que se pueden presentar en un cableado</string>
    <string name="moving_text">Se trata de una profesión que está encargada de ejecutar instalaciones y reparaciones referentes a la electricidad. Sobre todo cuando se refiere a los equipos y la iluminación. Además, se encarga de ensamblar, probar y determinar los diversos fallos que se pueden presentar en un cableado</string>
    <string name="paint_text">Se trata de una profesión que está encargada de ejecutar instalaciones y reparaciones referentes a la electricidad. Sobre todo cuando se refiere a los equipos y la iluminación. Además, se encarga de ensamblar, probar y determinar los diversos fallos que se pueden presentar en un cableado</string>
    <string name="plumb_text">Se trata de una profesión que está encargada de ejecutar instalaciones y reparaciones referentes a la electricidad. Sobre todo cuando se refiere a los equipos y la iluminación. Además, se encarga de ensamblar, probar y determinar los diversos fallos que se pueden presentar en un cableado</string>
    <string name="tenic_text">Se trata de una profesión que está encargada de ejecutar instalaciones y reparaciones referentes a la electricidad. Sobre todo cuando se refiere a los equipos y la iluminación. Además, se encarga de ensamblar, probar y determinar los diversos fallos que se pueden presentar en un cableado</string>
    <string name="another_services">Otros servicios</string>
    <string name="electric_text">Se trata de una profesión que está encargada de ejecutar instalaciones y reparaciones referentes a la electricidad. Sobre todo cuando se refiere a los equipos y la iluminación. Además, se encarga de ensamblar, probar y determinar los diversos fallos que se pueden presentar en un cableado</string>
    <string name="todo">TODO</string>
    <string name="All">TODO</string>
    <string name="cancel">Cancelar</string>
    <string name="register">Registrar</string>
    <string name="name">Nombre</string>
    <string name="create_new_account">Crear una nueva cuenta</string>
    <string name="apellido">Apellido</string>

</resources>